@@ -1,7 +1,7 @@
 Package: cbaf
 biocViews: Technology
 Title: Automated functions for comparing various data from cbioportal.org
-Version: 1.5.3
+Version: 1.5.4
 Authors@R: c(person("Arman", "Shahrisa", role = c("aut", "cre", "cph"),
                      email = "shahrisa.arman@hotmail.com"),
             person("Maryam", "Tahmasebi Birgani", role = "aut",
@@ -29,3 +29,4 @@ Collate:
     'cbaf-processMultipleStudies.R'
     'cbaf-processOneStudy.R'
     'cbaf-xlsxOutput.R'
+    'zzz.R'
