@@ -8,8 +8,8 @@
 #' \tabular{lllll}{
 #' Package: \tab cbaf \cr
 #' Type: \tab Package \cr
-#' Version: \tab 1.5.3 \cr
-#' Date: \tab 2019-03-09 \cr
+#' Version: \tab 1.6.0 \cr
+#' Date: \tab 2019-04-28 \cr
 #' License: \tab Artistic-2.0 \cr
 #' }
 #'
